--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@azure/msal-browser": "^4.0.0",
     "@azure/msal-react": "^3.0.0",
-    "@microsoft/signalr": "^8.0.7",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^5.10.17",
     "@types/react-redux": "^7.1.34",
     "react": "^18.3.1",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/node": "^22.15.30",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -35,6 +36,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-static-copy": "^3.0.0"
   }
 }
