--- a/pipeline/deploy.yml
+++ b/pipeline/deploy.yml
@@ -32,26 +32,30 @@ stages:
     displayName: 'Deploy on Local Ubuntu Agent'
     pool:
       name: 'local'
-    steps:
-    - task: DownloadBuildArtifacts@0
-      inputs:
-        buildType: 'current'
-        downloadType: 'single'
-        artifactName: '$(artifactName)'
-        downloadPath: '$(System.ArtifactsDirectory)'
-    - task: AzureKeyVault@2
-      inputs:
-        azureSubscription: 'mikkokok'
-        KeyVaultName: 'kv-kokkonenpro '
-        SecretsFilter: '*'
-        RunAsPreJob: true
-    - pwsh: |
-        $source = "$(System.ArtifactsDirectory)\$(artifactName)\*"
-        $dest = "C:\inetpub\wwwroot\kokkonen.pro"
-        .\pipeline\deploy.ps1 `
-            -WebServerIp "$(webServerIp)" `
-            -WebServerUser "$(webServerUser)" `
-            -WebServerPassword "$(webServerPassword)" `
-            -Source $source `
-            -Dest $dest
-      displayName: 'Copy files to remote web server (PowerShell Script)'
+    environment: 'local'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: DownloadBuildArtifacts@0
+            inputs:
+              buildType: 'current'
+              downloadType: 'single'
+              artifactName: '$(artifactName)'
+              downloadPath: '$(System.ArtifactsDirectory)'
+          - task: AzureKeyVault@2
+            inputs:
+              azureSubscription: 'mikkokok'
+              KeyVaultName: 'kv-kokkonenpro'
+              SecretsFilter: '*'
+              RunAsPreJob: true
+          - pwsh: |
+              $source = "$(System.ArtifactsDirectory)\$(artifactName)\*"
+              $dest = "C:\inetpub\wwwroot\kokkonen.pro"
+              .\pipeline\deploy.ps1 `
+                  -WebServerIp "$(webServerIp)" `
+                  -WebServerUser "$(webServerUser)" `
+                  -WebServerPassword "$(webServerPassword)" `
+                  -Source $source `
+                  -Dest $dest
+            displayName: 'Copy files to remote web server (PowerShell Script)'
