--- a/pipeline/deploy.yml
+++ b/pipeline/deploy.yml
@@ -13,13 +13,19 @@ stages:
       vmImage: 'windows-latest'
     steps:
     - checkout: self
+
     - task: NodeTool@0
       inputs:
         versionSpec: '18.x'
       displayName: 'Install Node.js'
-    - script: |
-        npm run build
-      displayName: 'Build React App'
+
+    - task: Npm@1
+      inputs:
+        command: 'custom'
+        customCommand: 'run build'
+        workingDir: '$(Build.SourcesDirectory)/app'
+      displayName: 'npm install'
+
     - publish: 'build'
       artifact: $(artifactName)
 
